# tikfinity-stream-bridge

./: README.md  package-lock.json  package.json  server.js
mac-app/: index.html  package.json
mac-app/src/: main.js  style.css
mac-app/src-tauri/: Cargo.toml  tauri.conf.json
mac-app/src-tauri/capabilities/: default.json
mac-app/src-tauri/src/: main.rs
public/: app.js  index.html  launcher.hta
scripts/: build-icon.js  package-folder.ps1  prepare-mac-sidecars.js  stamp-exe-icon.js
src/: bridge-state.js  normalize.js  tickfinity-client.js
